se agrega los botones de los mantenedores

--- a/SistemaHotel/SistemaHotel.csproj
+++ b/SistemaHotel/SistemaHotel.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CapaPresentacion\CapaPresentacion.csproj">
+      <Project>{4C92CC1F-E1EF-48D8-BF37-BE3A9023B7A2}</Project>
+      <Name>CapaPresentacion</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
