--- a/CapaLogicaNegocio/CapaLogicaNegocio.csproj
+++ b/CapaLogicaNegocio/CapaLogicaNegocio.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="logCliente.cs" />
     <Compile Include="logPrenda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
