--- a/CapaLogicaNegocio/CapaLogicaNegocio.csproj
+++ b/CapaLogicaNegocio/CapaLogicaNegocio.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="logHabitacion.cs" />
     <Compile Include="logPrenda.cs" />
+    <Compile Include="logTipoHabitacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
