--- a/CapaLogicaNegocio/CapaLogicaNegocio.csproj
+++ b/CapaLogicaNegocio/CapaLogicaNegocio.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="logCliente.cs" />
-    <Compile Include="logPrenda.cs" />
+    <Compile Include="logServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
