mantenedor tipoHabitación completado

--- a/CapaAccesoDatos/CapaAccesoDatos.csproj
+++ b/CapaAccesoDatos/CapaAccesoDatos.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="datHabitacion.cs" />
+    <Compile Include="DatHabitacionI.cs" />
     <Compile Include="datTipoHabitacion.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="datPrenda.cs" />
+    <Compile Include="DatTipoHabitacionI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
