--- a/CapaLogicaNegocio/CapaLogicaNegocio.csproj
+++ b/CapaLogicaNegocio/CapaLogicaNegocio.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="logHabitacion.cs" />
+    <Compile Include="LogHabitacionI.cs" />
     <Compile Include="logPrenda.cs" />
     <Compile Include="logTipoHabitacion.cs" />
+    <Compile Include="LogTipoHabitacionI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
