--- a/CapaAccesoDatos/CapaAccesoDatos.csproj
+++ b/CapaAccesoDatos/CapaAccesoDatos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="datHabitacion.cs" />
     <Compile Include="DatHabitacionI.cs" />
+    <Compile Include="datServicio.cs" />
     <Compile Include="datTipoHabitacion.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="DatTipoHabitacionI.cs" />
