Cambios-SeAgrega MantenedorTipoCliente

--- a/CapaAccesoDatos/CapaAccesoDatos.csproj
+++ b/CapaAccesoDatos/CapaAccesoDatos.csproj
@@ -41,9 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="datCliente.cs" />
     <Compile Include="datHabitacion.cs" />
     <Compile Include="DatHabitacionI.cs" />
     <Compile Include="datServicio.cs" />
+    <Compile Include="datTipoCliente.cs" />
     <Compile Include="datTipoHabitacion.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="DatTipoHabitacionI.cs" />
