--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="entCliente.cs" />
     <Compile Include="entHabitacion.cs" />
     <Compile Include="entServicio.cs" />
+    <Compile Include="entTipoCliente.cs" />
     <Compile Include="entTipoHabitacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
