--- a/CapaAccesoDatos/CapaAccesoDatos.csproj
+++ b/CapaAccesoDatos/CapaAccesoDatos.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="datCiudad.cs" />
     <Compile Include="datCliente.cs" />
     <Compile Include="datHabitacion.cs" />
     <Compile Include="DatHabitacionI.cs" />
